limpiando  css y custom

--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="shortcut icon" href="assets/images/generales/favicon.ico" type="image/x-icon" />
+	<link rel="apple-touch-icon" sizes="57x57" href="assets/images/generales/favicons/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="assets/images/generales/favicons/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/generales/favicons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/images/generales/favicons/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/generales/favicons/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/images/generales/favicons/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="assets/images/generales/favicons/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/images/generales/favicons/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/generales/favicons/apple-touch-icon-180x180.png">
+	<link rel="icon" type="image/png" href="assets/images/generales/favicons/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="assets/images/generales/favicons/android-chrome-192x192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="assets/images/generales/favicons/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="assets/images/generales/favicons/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="assets/images/generales/favicons/manifest.json">
+	<link rel="mask-icon" href="assets/images/generales/favicons/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-TileImage" content="assets/images/generales/favicons/mstile-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css" type="text/css"/>
 	<link rel="stylesheet" type="text/css" href="assets/styles/custom-styles.css" type="text/css"/>
 	<link rel="stylesheet" type="text/css" href="assets/styles/slick.css" type="text/css"/>
@@ -42,7 +60,84 @@
 						<div class="main-menu-section-wrapper">
 							<div class="flex mobile-column-wrap">
 								<div class="menu-item">
-									<a href="" class="menu-btn padding-quarter"><h1>Un ítem</h1></a>
+									<a href="" class="menu-btn padding-quarter"><h1>Prototipos</h1></a>
+									<div class="child-menu">
+										<div class="flex mobile-column-wrap up-down-padding-half">
+											<div class="sub-menu-item">
+												<a href="" class="sub-menu-btn padding-quarter"><h1>bla bla</h1></a>
+												<div class="sub-child-menu">
+													<div class="flex mobile-column-wrapf">
+														<div class="max-w-30e source-serif-font padding-half border-box">
+															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tempus sagittis. Nam ultrices egestas arcu ut tristique.Aenean at tristique purus, eget tristique orci.</p>
+														</div>
+													</div>
+													<div class="filter-menu flex">
+														<div>
+															<div class="flex source-serif-font">
+																<div>Año</div>
+																<div class="more-btn">&crarr;</div>
+															</div>
+															<form action="">
+															  <input type="radio" name="gender" value="male"> 1906<br>
+															  <input type="radio" name="gender" value="female">1914<br>
+															  <input type="radio" name="gender" value="other"> 20022
+															</form>
+														</div>
+														<div>
+															<div class="flex source-serif-font">
+																<div>Categoría</div>
+																<div class="more-btn">&crarr;</div>
+															</div>
+															<form action="">
+															  <input type="radio" name="gender" value="male"> 1906<br>
+															  <input type="radio" name="gender" value="female">1914<br>
+															  <input type="radio" name="gender" value="other"> 20022
+															</form>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="sub-menu-item">
+												<a href="" class="sub-menu-btn padding-quarter"><h1>Uno más</h1></a>
+												<div class="sub-child-menu">
+													<div class="flex mobile-column-wrapf">
+														<div class="max-w-30e source-serif-font">
+															<p>(apoyos) He felt a slight itch up on his belly; pushed himself slowly up on his back towards the headboard so that he could lift his head better; found where the itch was, and saw that it was covered</p>
+														</div>
+													</div>
+													<div class="filter-menu">
+														<div>
+															<p class="source-serif-font">año</p>
+															<select>
+																<option value="" disabled="disabled" selected="selected">Año</option>
+																<option value="saab">1902</option>
+																<option value="opel">1404</option>
+																<option value="audi">2016</option>
+															</select>
+														</div>
+														<div>
+															<p class="source-serif-font">categoría</p>
+															<select>
+																<option value="" disabled="disabled" selected="selected">categoría</option>
+																<option value="saab">1902</option>
+																<option value="opel">1404</option>
+																<option value="audi">2016</option>
+															</select>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="sub-menu-item">
+												<a href="" class="sub-menu-btn padding-quarter"><h1>eventos internacionales</h1></a>
+											</div>
+											<div class="sub-menu-item">
+												<a href="" class="padding-quarter"><h1>publicaciones</h1></a>
+											</div>
+											<div class="sub-menu-item">
+												<a href="" class="padding-quarter"><h1>herramientas</h1></a>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="menu-item">
 									<a href="" id="" class="menu-btn padding-quarter"><h1>Otro item</h1></a>
@@ -246,7 +341,7 @@
 				<section class="grid flex justify-center-trigger-1040 flex_wrap top-padding-3 right-padding-half">
 					<div class="square-25">
 						<div class="square-content">
-							<div class="square-img-bkgd-cover sample-image"></div>
+							<div class="square-img-bkgd-contain sample-image"></div>
 							<div class="square-text-hidden trans-600">
 								<div class="full-content bkgd-white padding-1 border-box">
 									<a href="basico.html">
@@ -259,7 +354,7 @@
 					</div>
 					<div class="square-25">
 						<div class="square-content">
-							<div class="square-img-bkgd-cover"></div>
+							<div class="square-img-bkgd-contain"></div>
 							<div class="square-text-content">
 								<div class="bottom-padding-1">
 									<h2>Noticia destacada (sólo texto)</h2>
@@ -276,7 +371,7 @@
 					<div class="square-25">
 						<a href="">
 							<div class="square-content">
-								<div class="square-img-bkgd-cover sample-image-2"></div>
+								<div class="square-img-bkgd-contain sample-image-0"></div>
 								<div class="square-text-hidden trans-600">
 									<div class="full-content bkgd-white padding-1 border-box">
 										<h3>Esto es un título</h3>
@@ -290,7 +385,7 @@
 					<div class="square-25">
 						<a href="">
 							<div class="square-content">
-								<div class="square-img-bkgd-cover sample-image-3"></div>
+								<div class="square-img-bkgd-contain sample-image-1"></div>
 								<div class="square-text-hidden trans-600">
 									<div class="full-content bkgd-white padding-1 border-box">
 										<h3>Esto es un título</h3>
@@ -304,7 +399,7 @@
 					<div class="square-25">
 						<a href="">
 							<div class="square-content">
-								<div class="square-img-bkgd-cover sample-image-4"></div>
+								<div class="square-img-bkgd-contain sample-image-2"></div>
 								<div class="square-text-hidden trans-600">
 									<div class="full-content bkgd-white padding-1 border-box">
 										<h3>Esto es un título</h3>
@@ -318,7 +413,7 @@
 					<div class="square-25">
 						<a href="">
 							<div class="square-content">
-								<div class="square-img-bkgd-cover sample-image-5"></div>
+								<div class="square-img-bkgd-contain sample-image-3"></div>
 								<div class="square-text-hidden trans-600">
 									<div class="full-content bkgd-white padding-1 border-box">
 										<h3>Esto es un título</h3>
@@ -332,7 +427,49 @@
 					<div class="square-25">
 						<a href="">
 							<div class="square-content">
-								<div class="square-img-bkgd-cover sample-image-6"></div>
+								<div class="square-img-bkgd-contain sample-image-4"></div>
+								<div class="square-text-hidden trans-600">
+									<div class="full-content bkgd-white padding-1 border-box">
+										<h3>Esto es un título</h3>
+										<p class="category-label">categoría</p>
+										<p>But that would be extremely strained and suspicious as in fifteen years of service Gregor had never once yet </p>
+									</div>
+								</div>
+						    </div>
+						</a>
+					</div>
+					<div class="square-25">
+						<a href="">
+							<div class="square-content">
+								<div class="square-img-bkgd-contain sample-image-5"></div>
+								<div class="square-text-hidden trans-600">
+									<div class="full-content bkgd-white padding-1 border-box">
+										<h3>Esto es un título</h3>
+										<p class="category-label">categoría</p>
+										<p>But that would be extremely strained and suspicious as in fifteen years of service Gregor had never once yet </p>
+									</div>
+								</div>
+						    </div>
+						</a>
+					</div>
+					<div class="square-25">
+						<a href="">
+							<div class="square-content">
+								<div class="square-img-bkgd-contain sample-image-6"></div>
+								<div class="square-text-hidden trans-600">
+									<div class="full-content bkgd-white padding-1 border-box">
+										<h3>Esto es un título</h3>
+										<p class="category-label">categoría</p>
+										<p>But that would be extremely strained and suspicious as in fifteen years of service Gregor had never once yet </p>
+									</div>
+								</div>
+						    </div>
+						</a>
+					</div>
+					<div class="square-25">
+						<a href="">
+							<div class="square-content">
+								<div class="square-img-bkgd-contain sample-image-7"></div>
 								<div class="square-text-hidden trans-600">
 									<div class="full-content bkgd-white padding-1 border-box">
 										<h3>Esto es un título</h3>
