--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 		<div class="content-box-1400">
 			<div class="content-box-1200">
 				<section>
-					<h1>Retícula</h1>
+					<h1>Cambio ligero</h1>
 					<h2>Ésta es una sección en un contenedor de 1200px</h2>
 					<p>Cualquier elemento tipo <code> &lt;section&gt;</code> tendrá un espaciado general predefinido de 1em</p>
 				</section>
