--- a/simple-menu.html
+++ b/simple-menu.html
@@ -50,262 +50,103 @@
 		</div>
 
 		<!-- MENUS -->
-		<div class="menu-wrapper">
-			<!-- Mobile menu button -->
-			<div class="mobile-menu-btn absolute-top-right global-margin-half"></div>
-			<!-- Main manu-->
-			<nav class="menu main-menu pac-menu content-box-1400 border-box">
-				<div class="menu-container flex flex_space-between">
-					<div class="main-menu-section ">
-						<div class="main-menu-section-wrapper">
-							<div class="flex mobile-column-wrap">
-								<div class="menu-item">
-									<a href="" class="menu-btn padding-quarter"><h1>Prototipos</h1></a>
-									<div class="child-menu">
-										<div class="flex mobile-column-wrap up-down-padding-half">
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>bla bla</h1></a>
-												<div class="sub-child-menu">
-													<div class="flex mobile-column-wrapf">
-														<div class="max-w-30e source-serif-font padding-half border-box">
-															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tempus sagittis. Nam ultrices egestas arcu ut tristique.Aenean at tristique purus, eget tristique orci.</p>
-														</div>
-													</div>
-													<div class="filter-menu flex">
-														<div>
-															<div class="flex source-serif-font">
-																<div>Año</div>
-																<div class="more-btn">&crarr;</div>
-															</div>
-															<form action="">
-															  <input type="radio" name="gender" value="male"> 1906<br>
-															  <input type="radio" name="gender" value="female">1914<br>
-															  <input type="radio" name="gender" value="other"> 20022
-															</form>
-														</div>
-														<div>
-															<div class="flex source-serif-font">
-																<div>Categoría</div>
-																<div class="more-btn">&crarr;</div>
-															</div>
-															<form action="">
-															  <input type="radio" name="gender" value="male"> 1906<br>
-															  <input type="radio" name="gender" value="female">1914<br>
-															  <input type="radio" name="gender" value="other"> 20022
-															</form>
-														</div>
-													</div>
+		<div class="fixed-menu">
+			<div class="menu-wrapper">
+				<!-- Mobile menu button -->
+				<div class="mobile-menu-btn absolute-top-right global-margin-half"></div>
+				<!-- Main manu-->
+				<div class="menu flex flex_space-between content-box-1400">
+					<nav class="menu-left-wrapper flex">
+						<div class="menu-item">
+							<a href="" class="menu-btn "><h1>Prototipos</h1></a>
+							<div class="child-menu">
+								<div class="flex mobile-column-wrap up-down-padding-half">
+									<div class="sub-menu-item">
+										<a href="" class="sub-menu-btn "><h1>bla bla</h1></a>
+										<div class="sub-child-menu">
+											<div class="flex mobile-column-wrapf">
+												<div class="max-w-30e source-serif-font padding-half border-box">
+													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tempus sagittis. Nam ultrices egestas arcu ut tristique.Aenean at tristique purus, eget tristique orci.</p>
 												</div>
 											</div>
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>Uno más</h1></a>
-												<div class="sub-child-menu">
-													<div class="flex mobile-column-wrapf">
-														<div class="max-w-30e source-serif-font">
-															<p>(apoyos) He felt a slight itch up on his belly; pushed himself slowly up on his back towards the headboard so that he could lift his head better; found where the itch was, and saw that it was covered</p>
-														</div>
+											<div class="filter-menu flex">
+												<div>
+													<div class="flex source-serif-font">
+														<div>Año</div>
+														<div class="more-btn">&crarr;</div>
 													</div>
-													<div class="filter-menu">
-														<div>
-															<p class="source-serif-font">año</p>
-															<select>
-																<option value="" disabled="disabled" selected="selected">Año</option>
-																<option value="saab">1902</option>
-																<option value="opel">1404</option>
-																<option value="audi">2016</option>
-															</select>
-														</div>
-														<div>
-															<p class="source-serif-font">categoría</p>
-															<select>
-																<option value="" disabled="disabled" selected="selected">categoría</option>
-																<option value="saab">1902</option>
-																<option value="opel">1404</option>
-																<option value="audi">2016</option>
-															</select>
-														</div>
-													</div>
+													<form action="">
+													  <input type="radio" name="gender" value="male"> 1906<br>
+													  <input type="radio" name="gender" value="female">1914<br>
+													  <input type="radio" name="gender" value="other"> 20022
+													</form>
 												</div>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>eventos internacionales</h1></a>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="padding-quarter"><h1>publicaciones</h1></a>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="padding-quarter"><h1>herramientas</h1></a>
+												<div>
+													<div class="flex source-serif-font">
+														<div>Categoría</div>
+														<div class="more-btn">&crarr;</div>
+													</div>
+													<form action="">
+													  <input type="radio" name="gender" value="male"> 1906<br>
+													  <input type="radio" name="gender" value="female">1914<br>
+													  <input type="radio" name="gender" value="other"> 20022
+													</form>
+												</div>
 											</div>
 										</div>
 									</div>
-								</div>
-								<div class="menu-item">
-									<a href="" id="" class="menu-btn padding-quarter"><h1>Otro item</h1></a>
-									<div class="child-menu">
-										<div class="flex mobile-column-wrap up-down-padding-half">
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>bla bla</h1></a>
-												<div class="sub-child-menu">
-													<div class="flex mobile-column-wrapf">
-														<div class="max-w-30e source-serif-font padding-half border-box">
-															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tempus sagittis. Nam ultrices egestas arcu ut tristique.Aenean at tristique purus, eget tristique orci.</p>
-														</div>
-													</div>
-													<div class="filter-menu flex">
-														<div>
-															<div class="flex source-serif-font">
-																<div>Año</div>
-																<div class="more-btn">&crarr;</div>
-															</div>
-															<form action="">
-															  <input type="radio" name="gender" value="male"> 1906<br>
-															  <input type="radio" name="gender" value="female">1914<br>
-															  <input type="radio" name="gender" value="other"> 20022
-															</form>
-														</div>
-														<div>
-															<div class="flex source-serif-font">
-																<div>Categoría</div>
-																<div class="more-btn">&crarr;</div>
-															</div>
-															<form action="">
-															  <input type="radio" name="gender" value="male"> 1906<br>
-															  <input type="radio" name="gender" value="female">1914<br>
-															  <input type="radio" name="gender" value="other"> 20022
-															</form>
-														</div>
-													</div>
+									<div class="sub-menu-item">
+										<a href="" class="sub-menu-btn padding-quarter"><h1>Uno más</h1></a>
+										<div class="sub-child-menu">
+											<div class="flex mobile-column-wrapf">
+												<div class="max-w-30e source-serif-font">
+													<p>(apoyos) He felt a slight itch up on his belly; pushed himself slowly up on his back towards the headboard so that he could lift his head better; found where the itch was, and saw that it was covered</p>
 												</div>
 											</div>
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>Uno más</h1></a>
-												<div class="sub-child-menu">
-													<div class="flex mobile-column-wrapf">
-														<div class="max-w-30e source-serif-font">
-															<p>(apoyos) He felt a slight itch up on his belly; pushed himself slowly up on his back towards the headboard so that he could lift his head better; found where the itch was, and saw that it was covered</p>
-														</div>
-													</div>
-													<div class="filter-menu">
-														<div>
-															<p class="source-serif-font">año</p>
-															<select>
-																<option value="" disabled="disabled" selected="selected">Año</option>
-																<option value="saab">1902</option>
-																<option value="opel">1404</option>
-																<option value="audi">2016</option>
-															</select>
-														</div>
-														<div>
-															<p class="source-serif-font">categoría</p>
-															<select>
-																<option value="" disabled="disabled" selected="selected">categoría</option>
-																<option value="saab">1902</option>
-																<option value="opel">1404</option>
-																<option value="audi">2016</option>
-															</select>
-														</div>
-													</div>
+											<div class="filter-menu">
+												<div>
+													<p class="source-serif-font">año</p>
+													<select>
+														<option value="" disabled="disabled" selected="selected">Año</option>
+														<option value="saab">1902</option>
+														<option value="opel">1404</option>
+														<option value="audi">2016</option>
+													</select>
 												</div>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>eventos internacionales</h1></a>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="padding-quarter"><h1>publicaciones</h1></a>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="padding-quarter"><h1>herramientas</h1></a>
+												<div>
+													<p class="source-serif-font">categoría</p>
+													<select>
+														<option value="" disabled="disabled" selected="selected">categoría</option>
+														<option value="saab">1902</option>
+														<option value="opel">1404</option>
+														<option value="audi">2016</option>
+													</select>
+												</div>
 											</div>
 										</div>
 									</div>
-								</div>
-								<div class="menu-item">
-									<a href="" id="" class="menu-btn padding-quarter"><h1>uno más</h1></a>
-									<div class="child-menu">
-										<div class="flex mobile-column-wrap up-down-padding-half">
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>sitac</h1></a>
-												<div class="sub-child-menu">
-													<div class="flex mobile-column-wrapf">
-														<div class="max-w-30e source-serif-font padding-half border-box">
-															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tempus sagittis. Nam ultrices egestas arcu ut tristique.Aenean at tristique purus, eget tristique orci.</p>
-														</div>
-													</div>
-													<div class="filter-menu flex">
-														<div>
-															<div class="flex source-serif-font">
-																<div>Año</div>
-																<div class="more-btn">&crarr;</div>
-															</div>
-															<form action="">
-															  <input type="radio" name="gender" value="male"> 1906<br>
-															  <input type="radio" name="gender" value="female">1914<br>
-															  <input type="radio" name="gender" value="other"> 20022
-															</form>
-														</div>
-														<div>
-															<div class="flex source-serif-font">
-																<div>Categoría</div>
-																<div class="more-btn">&crarr;</div>
-															</div>
-															<form action="">
-															  <input type="radio" name="gender" value="male"> 1906<br>
-															  <input type="radio" name="gender" value="female">1914<br>
-															  <input type="radio" name="gender" value="other"> 20022
-															</form>
-														</div>
-													</div>
-												</div>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>apoyos</h1></a>
-												<div class="sub-child-menu">
-													<div class="flex mobile-column-wrapf">
-														<div class="max-w-30e source-serif-font">
-															<p>(apoyos) He felt a slight itch up on his belly; pushed himself slowly up on his back towards the headboard so that he could lift his head better; found where the itch was, and saw that it was covered</p>
-														</div>
-													</div>
-													<div class="filter-menu">
-														<div>
-															<p class="source-serif-font">año</p>
-															<select>
-																<option value="" disabled="disabled" selected="selected">Año</option>
-																<option value="saab">1902</option>
-																<option value="opel">1404</option>
-																<option value="audi">2016</option>
-															</select>
-														</div>
-														<div>
-															<p class="source-serif-font">categoría</p>
-															<select>
-																<option value="" disabled="disabled" selected="selected">categoría</option>
-																<option value="saab">1902</option>
-																<option value="opel">1404</option>
-																<option value="audi">2016</option>
-															</select>
-														</div>
-													</div>
-												</div>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="sub-menu-btn padding-quarter"><h1>eventos internacionales</h1></a>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="padding-quarter"><h1>publicaciones</h1></a>
-											</div>
-											<div class="sub-menu-item">
-												<a href="" class="padding-quarter"><h1>herramientas</h1></a>
-											</div>
-										</div>
+									<div class="sub-menu-item">
+										<a href="" class="sub-menu-btn padding-quarter"><h1>eventos internacionales</h1></a>
+									</div>
+									<div class="sub-menu-item">
+										<a href="" class="padding-quarter"><h1>publicaciones</h1></a>
+									</div>
+									<div class="sub-menu-item">
+										<a href="" class="padding-quarter"><h1>herramientas</h1></a>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="menu-right-wrapper flex column-trigger-1040">
+						<div class="menu-item">
+							<a href="" class="menu-btn "><h1>Elementos</h1></a>
+						</div>
+						<div class="menu-item">
+							<a href="" class="menu-btn "><h1>Documentacion</h1></a>
+						</div>
+					</nav>
+					<nav class="menu-right-wrapper flex">
 						<!-- Search form -->
 						<div class="menu-search-item flex">
-
 							<form action="" class="search-form flex">
 								<!-- <input type="submit" value="buscar"> -->
 							  	<input type="text" name="usrname">
@@ -315,19 +156,19 @@
 						<!-- Menu secondary options -->
 						<div class="secondary-options flex flex-wrap">					
 							<div class="menu-item">
-									<a href="" class="padding-quarter"><h1>Esp.</h1></a>
+									<a href="" class=""><h1>Esp.</h1></a>
 							</div>
 							<div class="menu-item">
-									<a href="" class="padding-quarter"><h1>Eng.</h1></a>
+									<a href="" class=""><h1>Eng.</h1></a>
 							</div>
 							<div class="redes flex">
-								<div class="menu-item"><a href="" class="padding-quarter "><h1>Tw</h1></a></div>
-								<div class="menu-item"><a href="" class="padding-quarter"><h1>Fb</h1></a></div>
+								<div class="menu-item"><a href="" class=" "><h1>Tw</h1></a></div>
+								<div class="menu-item"><a href="" class=""><h1>Fb</h1></a></div>
 							</div>
 						</div>
-					</div>
-				</div>	
-			</nav>
+					</nav>
+				</div>
+			</div>
 		</div>
 
 		<!-- CONTENT -->
